--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "express": "^5.1.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.13.0"
   }
 }
