--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0"
