--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0",
     "zod": "^4.0.17"
