feat: 회원가입/로그인/마이페이지 프론트 api 연결 설정
일단 AI로 수정했고, 앞으로 백엔드 개발하면서 프론트 수정도 많이 필요할 수 있습니다.
파일별 수정 내용 적어두겠습니다!

- frontend/src/services/types.ts
SignupFormInput, LoginFormInput, AuthResponse, UserProfile, ProfileUpdateInput 등 인증 및 사용자 관련 데이터 타입 정의 추가

- frontend/src/services/fetch.ts
enhancedFetch 함수 수정: localStorage의 accessToken을 읽어 Authorization: Bearer 헤더를 모든 요청에 자동 추가하는 로직

- frontend/src/services/api.ts
signup, login, logout, getMyProfile, updateMyProfile, getMyStyles, getMyLikes 함수 추가

- frontend/src/context/AuthContext.tsx
AuthContext, AuthProvider, useAuth 훅 정의. 전역 로그인 상태 및 사용자 정보 관리.

- frontend/src/app/layout.tsx
AuthProvider를 임포트하여 앱의 최상위 컴포넌트를 감싸도록 수정

- frontend/src/libs/shared/navigation/GlobalNavigationBar.tsx
useState 기반의 임시 로그인 상태 제거. useAuth 훅을 사용하여 전역 로그인 상태 및 logout 함수 연동

- frontend/src/app/login/page.tsx
useAuth 훅을 사용하여 로그인 상태 및 사용자 정보 연동
api.getMyProfile, api.getMyStyles, api.getMyLikes를 호출하여 실제 데이터 표시
'설정' 탭에 프로필 수정 폼 추가 및 api.updateMyProfile 연동

- frontend/src/app/mypage/page.module.scss, frontend/src/app/signup/page.module.scss, frontend/src/app/login/page.module.scss
에러 메시지 및 새로운 폼 요소들을 위한 스타일 추가

-  frontend/tsconfig.json
`context` 폴더 추가에 따른 경로 별칭(Path Alias) 추가

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -38,10 +38,13 @@
       "@app/*": [
         "src/app/*"
       ],
+      "@context/*": [
+        "src/context/*"
+      ],
       // 아직 alias 하지 않은 src 내 경로의 경우 이 곳에 해당됨
       "@/*": [
         "src/*"
-      ],
+      ]
     }
   },
   "include": [
