--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0",
     "zod": "^4.0.17"
