feat: redis 캐싱 활용한 이메일 인증 구현
기존 DB에 필드를 추가해 토큰을 저장하는 방법 대신 redis를 활용해 캐싱으로 토큰을 저장하는 방식으로 구현했습니다.
프론트는 아직 수정 전이고, 백엔드 구현만 완료하고 테스트까지 완료되었습니다.
기존 signup 함수는 삭제하고, 인증/인증 완료 후 회원가입 함수를 추가했습니다.

.env 파일에 REDIS_URL이 추가되었습니다.

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0",
+    "redis": "^5.8.2",
     "zod": "^4.0.17"
   }
 }
