--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0",
     "redis": "^5.8.2",
